[gd_scene load_steps=19 format=3 uid="uid://bsjjo30b5fe14"]

[ext_resource type="Script" path="res://final/level parts/playerv2.gd" id="1_ytndl"]
[ext_resource type="PackedScene" uid="uid://htw77c7ltgq4" path="res://final/level parts/crafting.tscn" id="2_u20nh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2kn44"]
albedo_color = Color(0.266667, 0.364706, 0.909804, 1)
emission_enabled = true
emission = Color(1, 1, 1, 1)
emission_energy_multiplier = 0.47

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gdk7j"]
material = SubResource("StandardMaterial3D_2kn44")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bxmmh"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5mkak"]
transparency = 1
albedo_color = Color(1, 0, 0, 0.360784)
emission_enabled = true
emission = Color(1, 0, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_r0lhj"]
material = SubResource("StandardMaterial3D_5mkak")
top_radius = 0.1
bottom_radius = 0.1
height = 15.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_br43v"]
radius = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_av156"]
radius = 0.1

[sub_resource type="SphereShape3D" id="SphereShape3D_hi1s8"]
radius = 5.0

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_3ogcv"]
points = PackedVector3Array(3.07325, -6.38158, 1.01412, -2.89678, -6.58794, -1.4549, 0.396864, 6.58794, -0.631493, -1.0432, -6.38158, 3.07325, 1.42583, -6.58794, -2.89678, -0.425943, 6.58794, 0.602415, 1.01412, -6.58794, 3.07325, -0.837648, -6.17522, -3.10294, -2.89678, -6.17522, 1.42583, 3.07325, -6.58794, -1.0432, 0.80857, 5.97016, 0.396864, -0.631493, 6.58794, -0.425943, 2.24924, -5.7638, 2.24924, -3.10294, -5.7638, 0.190709, -2.27892, -5.97016, -2.27892, 2.45539, -5.97016, -2.07277, 0.396864, 5.97016, 0.80857, -1.86722, -6.58794, 2.66094, 0.602415, -5.97016, -3.10294, -0.425943, 5.7638, -0.837648, -0.837648, 5.35238, 0.602415, 3.07325, -5.97016, -0.837648, 0.80857, 5.35238, -0.631493, -0.425943, -5.7638, 3.07325, -2.89678, -5.35238, -1.0432, -1.86722, -6.58794, -2.69063, 1.83753, -6.17522, -2.69063, -2.07277, -5.97016, 2.45539, 1.01412, -5.14602, 2.8671, 3.07325, -5.7638, 0.602415, -0.837648, 5.97016, -0.219788, 2.66094, -6.17522, 1.83753)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_f1tbw"]
height = 0.5
radius = 0.75

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_l63qo"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="LabelSettings" id="LabelSettings_g583g"]
font_size = 37

[sub_resource type="CylinderShape3D" id="CylinderShape3D_q81mh"]
height = 1.0
radius = 20.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pw75d"]
height = 1.0
radius = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xgnll"]
shading_mode = 0
albedo_color = Color(0, 1, 1, 1)
disable_receive_shadows = true

[sub_resource type="SphereMesh" id="SphereMesh_wks1i"]
radius = 0.2
height = 0.4

[node name="player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
rotation_edit_mode = 2
collision_layer = 3
script = ExtResource("1_ytndl")

[node name="pivot" type="Node3D" parent="."]

[node name="model" type="MeshInstance3D" parent="pivot"]
mesh = SubResource("CapsuleMesh_gdk7j")
skeleton = NodePath("../..")

[node name="CSGSphere3D" type="CSGSphere3D" parent="pivot/model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.220586, 0.495756, -0.452397)
radius = 0.15
material = SubResource("StandardMaterial3D_bxmmh")

[node name="CSGSphere3D2" type="CSGSphere3D" parent="pivot/model"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.20923, 0.390453, -0.452397)
radius = 0.15
material = SubResource("StandardMaterial3D_bxmmh")

[node name="laser" type="Node3D" parent="pivot"]
visible = false

[node name="beam" type="Area3D" parent="pivot/laser"]
collision_layer = 0

[node name="beammesh" type="MeshInstance3D" parent="pivot/laser/beam"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_r0lhj")
skeleton = NodePath("../../../..")

[node name="beamshape" type="CollisionShape3D" parent="pivot/laser/beam"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_br43v")

[node name="bounce" type="Area3D" parent="pivot/laser"]
collision_layer = 0

[node name="bouncemesh" type="MeshInstance3D" parent="pivot/laser/bounce"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("CylinderMesh_r0lhj")
skeleton = NodePath("../../../..")

[node name="bounceshape" type="CollisionShape3D" parent="pivot/laser/bounce"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_av156")

[node name="ray" type="RayCast3D" parent="pivot/laser"]
target_position = Vector3(0, 0, -100)

[node name="Lamp" type="OmniLight3D" parent="pivot"]
transform = Transform3D(1, -8.88178e-16, 7.10543e-15, 8.88178e-16, 1, -3.76158e-36, -7.10543e-15, 6.31089e-30, 1, -7.10543e-15, -1.19209e-07, -5.96046e-08)
visible = false

[node name="Area3D" type="Area3D" parent="pivot/Lamp"]
collision_layer = 2
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="pivot/Lamp/Area3D"]
shape = SubResource("SphereShape3D_hi1s8")

[node name="FlashLight" type="SpotLight3D" parent="pivot"]
transform = Transform3D(1, 0, 0, 0, 0.988228, 0.152986, 0, -0.152986, 0.988228, 7.58808e-08, -0.512472, 0.432047)
visible = false
shadow_enabled = true
spot_range = 15.0
spot_angle = 20.0

[node name="Area3D" type="Area3D" parent="pivot/FlashLight"]
collision_layer = 2
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="pivot/FlashLight/Area3D"]
transform = Transform3D(1, 2.13163e-14, -3.08087e-15, 0, -0.154435, -0.988003, 0, 0.988003, -0.154435, -2.20268e-13, 1.15594, -7.39519)
shape = SubResource("ConvexPolygonShape3D_3ogcv")

[node name="interactSpace" type="Area3D" parent="pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)
collision_layer = 2
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="pivot/interactSpace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)
shape = SubResource("CylinderShape3D_f1tbw")

[node name="Passive light" type="OmniLight3D" parent="pivot"]
light_energy = 0.03
omni_attenuation = 0.0436332

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_l63qo")

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HSplitContainer" type="HSplitContainer" parent="ui"]
layout_mode = 0
offset_top = 576.0
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2

[node name="VSeparator" type="VSeparator" parent="ui/HSplitContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressBar" type="ProgressBar" parent="ui/HSplitContainer/VSeparator"]
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 62.0
mouse_filter = 2
value = 100.0

[node name="Flashlight" type="Panel" parent="ui/HSplitContainer/VSeparator"]
layout_mode = 2
offset_left = 136.0
offset_top = 8.0
offset_right = 184.0
offset_bottom = 56.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ui/HSplitContainer/VSeparator/Flashlight"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0
mouse_filter = 2
text = "Flash
light"

[node name="Lamp" type="Panel" parent="ui/HSplitContainer/VSeparator"]
layout_mode = 2
offset_left = 200.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 56.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ui/HSplitContainer/VSeparator/Lamp"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0
mouse_filter = 2
text = "Lamp"

[node name="Laser" type="Panel" parent="ui/HSplitContainer/VSeparator"]
layout_mode = 2
offset_left = 264.0
offset_top = 8.0
offset_right = 312.0
offset_bottom = 56.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ui/HSplitContainer/VSeparator/Laser"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0
mouse_filter = 2
text = "Laser"

[node name="Panel" type="Panel" parent="ui"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="ui/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 0.335968
offset_bottom = 47.0
grow_horizontal = 2
text = "INVENTORY"
label_settings = SubResource("LabelSettings_g583g")
horizontal_alignment = 1
vertical_alignment = 1

[node name="crafting" parent="ui/Panel" instance=ExtResource("2_u20nh")]
layout_mode = 1
offset_left = 137.0
offset_top = 68.104
offset_right = 137.0
offset_bottom = 68.104
scale = Vector2(0.75, 0.75)
mouse_filter = 2

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="mousespace" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="mousespace"]
shape = SubResource("CylinderShape3D_q81mh")

[node name="pickupspace" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="pickupspace"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("CylinderShape3D_pw75d")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 20, 17)
projection = 1
size = 16.0

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(-1, 0, -5.96046e-08, -2.98023e-08, 1, -1.49012e-08, 8.9407e-08, 1.78814e-07, -1, 0, 0, 0)
visible = false
target_position = Vector3(0, 0, 100)

[node name="ray_pos" type="MeshInstance3D" parent="Camera3D/RayCast3D"]
transform = Transform3D(1, -2.98023e-08, -2.98023e-08, -5.96046e-08, 1, 0, 2.98023e-08, 5.96046e-08, 1, 1.90735e-06, 0, 2.22201)
material_override = SubResource("StandardMaterial3D_xgnll")
cast_shadow = 0
gi_mode = 0
mesh = SubResource("SphereMesh_wks1i")

[connection signal="body_entered" from="pivot/Lamp/Area3D" to="." method="body_detected"]
[connection signal="body_entered" from="pivot/FlashLight/Area3D" to="." method="body_detected"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="input_event" from="mousespace" to="." method="_on_mouse"]
[connection signal="body_entered" from="pickupspace" to="." method="_on_pickupspace_body_entered"]
